--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -33,5 +33,17 @@
         <artifactId>webdrivermanager</artifactId>
         <version>RELEASE</version>
     </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
+        </dependency>
+
     </dependencies>
 </project>
